force-app/main/default/objects/user_attempt_result__c/user_attempt_result__c.object-meta.xml
<CustomObject>
    <label>User Attempt Result</label>
    <nameField>
        <displayFormat>UAN - {0000}</displayFormat>
        <label>User Attempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Attempt Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>