force-app/main/default/objects/user_attempt_result__c/fields/Attended_By__c.field-meta.xml
<CustomField>
    <fullName>Attended_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attended By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Attempt_Results</relationshipName>
    <type>Lookup</type>
</CustomField>