force-app/main/default/objects/user_attempt_result__c/fields/Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer__c</fullName>
    <label>Correct Answer</label>
    <type>TextArea</type>
</CustomField>