force-app/main/default/objects/user_attempt_result__c/fields/IsCorrect_Answer__c.field-meta.xml
<CustomField>
    <fullName>IsCorrect_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCorrect Answer</label>
    <type>Checkbox</type>
</CustomField>