force-app/main/default/objects/user_attempt_result__c/fields/Quiz_Question_Number__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Question_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quiz Question Number</label>
    <referenceTo>Quiz__c</referenceTo>
    <relationshipLabel>User Attempt Results</relationshipLabel>
    <relationshipName>User_Attempt_Results</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>