force-app/main/default/objects/user_attempt_result__c/fields/Selected_Answer__c.field-meta.xml
<CustomField>
    <fullName>Selected_Answer__c</fullName>
    <label>Selected Answer</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>