force-app/main/default/objects/user_attempt_result__c/fields/Selected_Question__c.field-meta.xml
<CustomField>
    <fullName>Selected_Question__c</fullName>
    <label>Selected Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>