force-app/main/default/objects/user_attempt_result__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <label>UUID</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>