force-app/main/default/objects/user_attempt_result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UUID__c</columns>
    <columns>Quiz_Question_Number__c</columns>
    <columns>IsCorrect_Answer__c</columns>
    <columns>Correct_Answer__c</columns>
    <columns>Selected_Answer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>